# apps/api/src/modules/orders/orders.module.ts
@@ -1,4 +1,6 @@
 import { Module } from '@nestjs/common';
+import { CartController } from './cart.controller';
+import { CartService } from './cart.service';
 
-@Module({})
+@Module({ controllers: [CartController], providers: [CartService] })
 export class OrdersModule {}
